--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,18 +3,18 @@ name: CD Pipeline
 on:
   push:
     branches:
-      - main
+      - main  # Trigger on push to main branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v3  # Checkout the repository
 
       - name: Set up Python
         uses: actions/setup-python@v4
-        with: 
+        with:
           python-version: "3.9"
 
       - name: Install dependencies
@@ -27,13 +27,22 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      - name: Ensure main branch is up to date with remote
+        run: |
+          # Fetch latest changes from remote
+          git fetch origin
+          # Checkout the main branch
+          git checkout main
+          # Merge with origin/main automatically (resolves conflicts automatically)
+          git merge origin/main --no-edit || true
+
       - name: Deploy Application
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
             # Navigate to the project directory
             cd /path/to/your/project
-            
-            # Pull the latest changes from the main branch (if using Git)
+
+            # Pull the latest changes from the main branch
             git pull origin main
 
             # Install dependencies
