--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,34 +12,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with: 
-          python-version: "3.9"
-
-      - name: Install dependencies
+      - name: Set up DigitalOcean CLI (doctl)
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          curl -sSL https://github.com/digitalocean/doctl/releases/download/v1.86.0/doctl-1.86.0-linux-amd64.tar.gz | tar xz
+          sudo mv doctl /usr/local/bin
+          doctl version
 
-      - name: Set up SSH key for deployment
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}  # Reference the secret correctly
-
-      - name: Deploy Application
+      - name: Authenticate to DigitalOcean API
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-            # Navigate to the project directory
-            cd /path/to/your/project
-            
-            # Pull the latest changes from the main branch (if using Git)
-            git pull origin main
+          echo "${{ secrets.DO_API_TOKEN }}" | doctl auth init -t
 
-            # Install dependencies
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
-
-            # Restart the app or server service (e.g., using systemd or supervisor)
-            sudo systemctl restart yourapp.service
-          EOF
+      - name: Deploy Application to DigitalOcean
+        run: |
+          doctl apps create --spec .do/app.yaml  # Modify with your app's spec or deploy command
